# my-sticker-project

./: .gitignore  Home.py  README.md  pyproject.toml
assets/: quotation_template.html
pages/: 2_Quotation.py
src/: ui.py  utils.py
